--- a/styles/style.css
+++ b/styles/style.css
@@ -34,22 +34,18 @@ body {
   width: 100%;
   background-color: white;
   z-index: 1000;
-
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
-
 }
 
 .logo {
   display: flex;
   align-items: center;
   gap: 5px;
-
 }
 
 .logo-icon {
@@ -67,7 +63,6 @@ body {
   font-size: 20px;
   margin: 0;
   min-width: 80px;
-
 }
 
 .logo-text h4 {
@@ -83,7 +78,6 @@ body {
   gap: 20px;
   align-items: center;
   justify-content: flex-end;
-
 }
 
 .nav-right {
@@ -116,7 +110,6 @@ body {
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
-  width: 0;
 }
 
 .nav-item:hover::after {
@@ -138,17 +131,15 @@ body {
   content: '';
   position: absolute;
   top: 24px;
-  bottom: 0px;
+  bottom: 0;
   left: 0;
   width: 0;
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
-  width: 0;
 }
 
-.nav-item-collapse:hover::after
-{
+.nav-item-collapse:hover::after {
   width: 100%;
 }
 
@@ -162,51 +153,46 @@ body {
 
 @media screen and (max-width: 1015px) {
   .nav-item-collapse {
-      display: none;
+    display: none;
   }
 }
 
 @media screen and (max-width: 760px) {
   .header {
-
-      align-items: center;
-
+    align-items: center;
   }
+
   .nav {
-      align-items: center;
-      flex-wrap: none;
-      justify-content: center;
-      gap: 4px;
-
+    align-items: center;
+    flex-wrap: none;
+    justify-content: center;
+    gap: 4px;
   }
+
   .nav-item {
-      gap: 0;
-      display: block;
-      flex-wrap: none;
-      align-items: end;
-      text-align: center;
-      max-height: none;
-      width: 80px;
-      height: 80px;
-      padding-top: 10px;
-
+    gap: 0;
+    display: block;
+    flex-wrap: none;
+    align-items: end;
+    text-align: center;
+    max-height: none;
+    width: 80px;
+    height: 80px;
+    padding-top: 10px;
   }
-
-  
 
   .mobile-nav {
-      display: block;
-      font-size: 12px;
-      line-height: 1;
-      justify-content: center;
-      padding-top: 5px;
+    display: block;
+    font-size: 12px;
+    line-height: 1;
+    justify-content: center;
+    padding-top: 5px;
   }
 
   .nav-item::after { 
-      display: none;
+    display: none;
   }
 }
-
 
 .p-search {
   margin: 0;
@@ -282,66 +268,54 @@ body {
 
 .search-btn:hover svg path {
   stroke: #003087;
-
 }
 
 @media screen and (max-width: 760px) {
-  
   .header-wrapper {
-      padding: 5px;
-      margin: 0;
+    padding: 5px;
+    margin: 0;
   }
   
   .emergency-btn {
-      width: 60px;
-      height: 60px;
-      gap: 10px;
-      padding: 0;
-
+    width: 60px;
+    height: 60px;
+    gap: 10px;
+    padding: 0;
   }
 
   .search-btn {
-      display: none;
+    display: none;
   }
 
   .nav-right {
-      margin: 0;
+    margin: 0;
   }
-  
 
   .emergency-icon {
-      width: 30px;
-      height: 30px;
-      padding-bottom: 5px;
+    width: 30px;
+    height: 30px;
+    padding-bottom: 5px;
   }
 
   .nav-item {
-      border: #acacac 1px solid;
-      gap: 0;
-      display: block;
-      flex-wrap: none;
-      align-items: end;
-      text-align: center;
-      max-height: none;
-      width: 60px;
-      height: 60px;
-      padding-top: 5px;
-      font-size: 10px;
-      padding-left: 0px;
-      padding-right: 0px;
-      padding-bottom: 0px;
-      padding-top: 5px;
-
+    border: #acacac 1px solid;
+    gap: 0;
+    display: block;
+    flex-wrap: none;
+    align-items: end;
+    text-align: center;
+    max-height: none;
+    width: 60px;
+    height: 60px;
+    padding: 5px 0 0 0;
+    font-size: 10px;
   }
 
   .p-menu {
-      font-size: 10px;
-      line-height: 1;
-      justify-content: center;
-      
+    font-size: 10px;
+    line-height: 1;
+    justify-content: center;
   }
-
-
 } 
 
 /* Icon placeholders */
@@ -394,60 +368,60 @@ h2 {
 }
 
 @media screen and (max-width: 540px) {
-  
   .wrap {
-      padding: 0 5px;
+    padding: 0 5px;
   }
 
   body {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   h1 {
-      font-size: 20px;
+    font-size: 20px;
   }
 
   .nav-item::after { 
-      display: none; 
+    display: none; 
   }
+
   .nav {
-      flex-direction: row;
-      max-width: 100%;
+    flex-direction: row;
+    max-width: 100%;
   }
+
   .nav-right {
-      flex-direction: row;
+    flex-direction: row;
   }
 
   .logo {
-      display: flex;
-      align-items: center;
-      gap: 2px;
-
-}
+    display: flex;
+    align-items: center;
+    gap: 2px;
+  }
 
   .logo-icon {
-      width: 36px;
-      height: 36px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: bold;
-      margin: 0;
-}
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+  }
 
   .header-wrapper {
-      padding: 0px;
-      margin: 0;
+    padding: 0;
+    margin: 0;
   }
 
   .section-wrap-header {
-      padding: 0px;
-      margin: 0;
+    padding: 0;
+    margin: 0;
   }
-
 }
+
 .subtitle {
   background-color: #f0f0f0;
   padding: 5px 20px;
@@ -704,7 +678,6 @@ h2 {
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
-  width: 0;
 }
 
 .hover-liner:hover::after {
@@ -712,18 +685,16 @@ h2 {
 }
 
 footer {
-  margin: 20px 0px 20px 0px;
+  margin: 20px 0 0 0;
   background-color: #002060;
   color: #fefefe;
   font-size: 14px;
   padding-top: 40px;
   padding-bottom: 10px;
-  margin-bottom: 0px;
 }
 
 .footer-links {
   display: flex;
-  
 }
 
 .hover-liner-footer {
@@ -736,7 +707,7 @@ footer {
   margin-left: 14px;
   font-size: 14px;
   text-align: left;
-  text-indent: 0px;
+  text-indent: 0;
   display: inline;
 }
 
@@ -744,12 +715,11 @@ footer {
   content: '';
   position: absolute;
   bottom: 0;
-  left: 0px;
+  left: 0;
   width: 0;
   height: 1px;
   background-color: #ffffff;
   transition: width 0.6s ease;
-  width: 0;
 }
 
 .hover-liner-footer:hover::after {
@@ -762,7 +732,7 @@ footer {
   width: 14px;
   height: 1px;
   margin-bottom: 2px;
-  margin-left: 0px;
+  margin-left: 0;
   margin-right: 4px;
   border-radius: 9999px;
   background-color: #fefefe;
@@ -772,9 +742,9 @@ footer {
   content: "";
   position: absolute;
   top: calc(50% - 1px);
-  left: 10;
+  left: 0;
   right: 0;
-w idth: 8px;
+  width: 8px;
   height: 1px;
   border-radius: 9999px;
   background-color: #fefefe;
@@ -787,7 +757,6 @@ w idth: 8px;
   align-items: end;
   gap: 5px;
   margin: 30px 20px 20px 10px;
-
 }
 
 .logo-footer-icon {
@@ -806,7 +775,6 @@ w idth: 8px;
   margin-right: 30px;
   min-width: 80px;
   color: #fefefe;
-
 }
 
 .logo-footer-text h4 {
@@ -821,14 +789,13 @@ w idth: 8px;
   align-items: start;
 }
 
-.footer-info{
+.footer-info {
   padding: 0;
   line-height: 1.2;
   font-size: 14px;
   text-align: left;
   margin: 0;
-  text-indent: 0px;
-
+  text-indent: 0;
 }
 
 .copyright {
@@ -842,7 +809,7 @@ w idth: 8px;
   display: flex;
   gap: 50px;
   align-items: end;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 .footer-white-box {
@@ -851,22 +818,20 @@ w idth: 8px;
   height: fit-content;
   text-align: left;
   margin: 0;
-  text-indent: 0px;
-  background-color: #fefefe
-
+  text-indent: 0;
+  background-color: #fefefe;
 }
 
 .contact-footer-icon {
   width: 64px;
   height: 64px;
-  margin-top; 80px;
+  margin-top: 80px;
   border-radius: 50%;
 }
 
 .white-box-right {
-  margin-top: 0px;
+  margin-top: 0;
   padding: 20px;
-
 }
 
 .p-white-box {
@@ -887,7 +852,6 @@ w idth: 8px;
   margin-top: 20px;
 }
 
-
 .contact-info-title {
   padding: 0;
   border-bottom: solid 1px #acacac;
@@ -902,8 +866,8 @@ w idth: 8px;
   color: #333;
   font-weight: 500;
   padding-bottom: 10px;
-  margin: 0px;
-  text-indent: 0px;
+  margin: 0;
+  text-indent: 0;
 }
 
 .contact-hover-liner::after {
@@ -915,20 +879,17 @@ w idth: 8px;
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
-  width: 0;
 }
 
 .contact-hover-liner:hover::after {
   width: 80%;
 }
 
-
 @media screen and (max-width: 540px) {
-  
   .footer-box {
-      flex-direction: column;
-      gap: 20px;
-      align-items: center;
-      text-align: center;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    text-align: center;
   }
-} 
+}
