--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,8 @@ html {
   min-width: 320px;
 }
 
-body {
-  margin: 0;
-  margin-top: 80px;
+body {  
+  margin: 80px 0 0;
   padding: 0;
   line-height: 1.6;
   color: #222;
@@ -34,18 +33,22 @@ body {
   width: 100%;
   background-color: white;
   z-index: 1000;
+
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
+
 }
 
 .logo {
   display: flex;
   align-items: center;
   gap: 5px;
+
 }
 
 .logo-icon {
@@ -63,6 +66,7 @@ body {
   font-size: 20px;
   margin: 0;
   min-width: 80px;
+
 }
 
 .logo-text h4 {
@@ -78,6 +82,7 @@ body {
   gap: 20px;
   align-items: center;
   justify-content: flex-end;
+
 }
 
 .nav-right {
@@ -110,6 +115,7 @@ body {
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
+  width: 0;
 }
 
 .nav-item:hover::after {
@@ -131,15 +137,17 @@ body {
   content: '';
   position: absolute;
   top: 24px;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
   width: 0;
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
+  width: 0;
 }
 
-.nav-item-collapse:hover::after {
+.nav-item-collapse:hover::after
+{
   width: 100%;
 }
 
@@ -153,46 +161,51 @@ body {
 
 @media screen and (max-width: 1015px) {
   .nav-item-collapse {
-    display: none;
+      display: none;
   }
 }
 
 @media screen and (max-width: 760px) {
   .header {
-    align-items: center;
-  }
 
+      align-items: center;
+
+  }
   .nav {
-    align-items: center;
-    flex-wrap: none;
-    justify-content: center;
-    gap: 4px;
+      align-items: center;
+      flex-wrap: none;
+      justify-content: center;
+      gap: 4px;
+
+  }
+  .nav-item {
+      gap: 0;
+      display: block;
+      flex-wrap: none;
+      align-items: end;
+      text-align: center;
+      max-height: none;
+      width: 80px;
+      height: 80px;
+      padding-top: 10px;
+
   }
 
-  .nav-item {
-    gap: 0;
-    display: block;
-    flex-wrap: none;
-    align-items: end;
-    text-align: center;
-    max-height: none;
-    width: 80px;
-    height: 80px;
-    padding-top: 10px;
-  }
+  
 
   .mobile-nav {
-    display: block;
-    font-size: 12px;
-    line-height: 1;
-    justify-content: center;
-    padding-top: 5px;
+      display: block;
+      font-size: 12px;
+      line-height: 1;
+      justify-content: center;
+      padding-top: 5px;
   }
 
   .nav-item::after { 
-    display: none;
+      display: none;
   }
 }
+
 
 .p-search {
   margin: 0;
@@ -268,54 +281,66 @@ body {
 
 .search-btn:hover svg path {
   stroke: #003087;
+
 }
 
 @media screen and (max-width: 760px) {
+  
   .header-wrapper {
-    padding: 5px;
-    margin: 0;
+      padding: 5px;
+      margin: 0;
   }
   
   .emergency-btn {
-    width: 60px;
-    height: 60px;
-    gap: 10px;
-    padding: 0;
+      width: 60px;
+      height: 60px;
+      gap: 10px;
+      padding: 0;
+
   }
 
   .search-btn {
-    display: none;
+      display: none;
   }
 
   .nav-right {
-    margin: 0;
+      margin: 0;
   }
+  
 
   .emergency-icon {
-    width: 30px;
-    height: 30px;
-    padding-bottom: 5px;
+      width: 30px;
+      height: 30px;
+      padding-bottom: 5px;
   }
 
   .nav-item {
-    border: #acacac 1px solid;
-    gap: 0;
-    display: block;
-    flex-wrap: none;
-    align-items: end;
-    text-align: center;
-    max-height: none;
-    width: 60px;
-    height: 60px;
-    padding: 5px 0 0 0;
-    font-size: 10px;
+      border: #acacac 1px solid;
+      gap: 0;
+      display: block;
+      flex-wrap: none;
+      align-items: end;
+      text-align: center;
+      max-height: none;
+      width: 60px;
+      height: 60px;
+      padding-top: 5px;
+      font-size: 10px;
+      padding-left: 0px;
+      padding-right: 0px;
+      padding-bottom: 0px;
+      padding-top: 5px;
+
   }
 
   .p-menu {
-    font-size: 10px;
-    line-height: 1;
-    justify-content: center;
+      font-size: 10px;
+      line-height: 1;
+      justify-content: center;
+      
   }
+
+
 } 
 
 /* Icon placeholders */
@@ -368,60 +393,60 @@ h2 {
 }
 
 @media screen and (max-width: 540px) {
+  
   .wrap {
-    padding: 0 5px;
+      padding: 0 5px;
   }
 
   body {
-    font-size: 14px;
+      font-size: 14px;
   }
 
   h1 {
-    font-size: 20px;
+      font-size: 20px;
   }
 
   .nav-item::after { 
-    display: none; 
+      display: none; 
   }
-
   .nav {
-    flex-direction: row;
-    max-width: 100%;
+      flex-direction: row;
+      max-width: 100%;
   }
-
   .nav-right {
-    flex-direction: row;
+      flex-direction: row;
   }
 
   .logo {
-    display: flex;
-    align-items: center;
-    gap: 2px;
-  }
+      display: flex;
+      align-items: center;
+      gap: 2px;
+
+}
 
   .logo-icon {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-weight: bold;
-    margin: 0;
-  }
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-weight: bold;
+      margin: 0;
+}
 
   .header-wrapper {
-    padding: 0;
-    margin: 0;
+      padding: 0px;
+      margin: 0;
   }
 
   .section-wrap-header {
-    padding: 0;
-    margin: 0;
+      padding: 0px;
+      margin: 0;
   }
-}
 
+}
 .subtitle {
   background-color: #f0f0f0;
   padding: 5px 20px;
@@ -678,6 +703,7 @@ h2 {
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
+  width: 0;
 }
 
 .hover-liner:hover::after {
@@ -685,16 +711,18 @@ h2 {
 }
 
 footer {
-  margin: 20px 0 0 0;
+  margin: 40px 0px 20px 0px;
   background-color: #002060;
   color: #fefefe;
   font-size: 14px;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .footer-links {
-  display: flex;
+  display: flex-wrap;
+  
 }
 
 .hover-liner-footer {
@@ -707,19 +735,22 @@ footer {
   margin-left: 14px;
   font-size: 14px;
   text-align: left;
-  text-indent: 0;
+  text-indent: 0px;
   display: inline;
+  min-width: 200px;
+  text-wrap: nowrap;
 }
 
 .hover-liner-footer::after {
   content: '';
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 0px;
   width: 0;
   height: 1px;
   background-color: #ffffff;
   transition: width 0.6s ease;
+  width: 0;
 }
 
 .hover-liner-footer:hover::after {
@@ -732,7 +763,7 @@ footer {
   width: 14px;
   height: 1px;
   margin-bottom: 2px;
-  margin-left: 0;
+  margin-left: 0px;
   margin-right: 4px;
   border-radius: 9999px;
   background-color: #fefefe;
@@ -742,7 +773,7 @@ footer {
   content: "";
   position: absolute;
   top: calc(50% - 1px);
-  left: 0;
+  left: 10;
   right: 0;
   width: 8px;
   height: 1px;
@@ -756,7 +787,8 @@ footer {
   display: flex;
   align-items: end;
   gap: 5px;
-  margin: 30px 20px 20px 10px;
+  margin: 20px 20px 20px 10px;
+
 }
 
 .logo-footer-icon {
@@ -772,9 +804,10 @@ footer {
 .logo-footer-text h3 {
   font-size: 22.5px;
   margin: 0;
-  margin-right: 30px;
+  margin-right: 10px;
   min-width: 80px;
   color: #fefefe;
+
 }
 
 .logo-footer-text h4 {
@@ -789,13 +822,14 @@ footer {
   align-items: start;
 }
 
-.footer-info {
+.footer-info{
   padding: 0;
   line-height: 1.2;
   font-size: 14px;
   text-align: left;
   margin: 0;
-  text-indent: 0;
+  text-indent: 0px;
+
 }
 
 .copyright {
@@ -809,7 +843,7 @@ footer {
   display: flex;
   gap: 50px;
   align-items: end;
-  justify-content: space-between;
+  justify-content: space-between
 }
 
 .footer-white-box {
@@ -818,39 +852,45 @@ footer {
   height: fit-content;
   text-align: left;
   margin: 0;
-  text-indent: 0;
-  background-color: #fefefe;
+  text-indent: 0px;
+  background-color: #fefefe
+
 }
 
 .contact-footer-icon {
   width: 64px;
   height: 64px;
-  margin-top: 80px;
+  margin-top: 15px;
   border-radius: 50%;
+  width: min-content;
+
 }
 
 .white-box-right {
-  margin-top: 0;
+  margin-top: 0px;
   padding: 20px;
+
 }
 
 .p-white-box {
-  margin: 0;
+  margin: 5px 0px;
   padding: 0;
   font-size: 14px;
-  line-height: 1.2;
+  line-height: 1;
   text-indent: 0;
   color: #333;
   align-items: end;
 }
 
 .contact {
-  padding: 40px;
+  padding: 20px;
+  width: 80px;
 }
 
 .footer-contact-info {
   margin-top: 20px;
 }
+
 
 .contact-info-title {
   padding: 0;
@@ -866,30 +906,108 @@ footer {
   color: #333;
   font-weight: 500;
   padding-bottom: 10px;
-  margin: 0;
-  text-indent: 0;
+  margin: 0px;
+  text-indent: 0px;
 }
 
 .contact-hover-liner::after {
   content: '';
   position: absolute;
-  bottom: 0;
-  left: 20px;
+  bottom: 8px;
+  left: 0px;
   width: 0;
   height: 1px;
   background-color: #acacac;
   transition: width 0.6s ease;
+  width: 0;
 }
 
 .contact-hover-liner:hover::after {
   width: 80%;
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 1030px) {
+  
   .footer-box {
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    text-align: center;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
+      text-align: center;
+  }
+} 
+@media screen and (max-width: 540px) {
+  
+  .footer-box {
+      flex-direction: column;
+      gap: 20px;
+      justify-content: end;
+      text-align: center;
+  }
+} 
+
+.contact-box-hover-liner {
+  position: relative;
+  text-decoration: none;
+  display: inline;
+  color: #333;
+  font-weight: 500;
+  margin: 10px 0px 0px 10px;
+  text-indent: 30px;
+  border: 1px solid #acacac;
+  padding: 5px 15px;
+  text-wrap: nowrap;
+}
+
+.contact-box-hover-liner::after {
+  content: '';
+  position: absolute;
+  bottom: 5px;
+  left: 15px;
+  width: 0;
+  height: 1px;
+  background-color: #acacac;
+  transition: width 0.6s ease;
+  width: 0;
+}
+
+.contact-box-hover-liner:hover::after {
+  width: 80%;
+}
+
+@media screen and (max-width: 540px) {
+  
+  .contact-box-hover-liner {
+      display: block;
+      margin: 10px 0px 0px 0px;
+  }
+  
+  .footer-white-box {
+      width: 100%;
+  }
+
+  .hover-liner-footer {
+    display: block;
+  }
+
+  .logo-footer-icon {
+      width: 30px;
+  }
+
+  .logo-footer-text h3 {
+      font-size: 17px;
+  }
+  .logo-footer-text h4 {
+      font-size: 10px;
+  }
+  .logo-footer {
+      align-items: center;
+  }
+
+  .corporate-numb {
+      margin-top: 16px;
+  }
+
+  .footer-info {
+      width: 100%;
   }
 }
