--- a/styles/style.css
+++ b/styles/style.css
@@ -580,6 +580,12 @@ h2 {
   line-height: 2.4;
 }
 
+@media screen and (max-width: 700px) {
+  .schedule-table {
+      font-size: 14px;
+  }
+}
+
 .img-box {
   display: flex;
   flex-direction: column;
