--- a/styles/style.css
+++ b/styles/style.css
@@ -783,30 +783,117 @@ width: 80%;
 .popup-carousel {
   margin-top: 40px;
   border: 1px solid #000000;
+  display: flex;
+  overflow: hidden;
 }
+
 .popup-carousel-title {
   background-color: #000000;
   color: #fefefe;
-  width: 30%;
-  height: max-content;
+  padding: 20px;
+  width: 40%;
 
 }
 
 .popup-carousel-title h2 {
-  padding: 20px 20px 0px 20px;
+  padding: 0;
+  margin: 0;
 }
 
 .popup-carousel-title p {
   margin: 0;
-  padding: 0px 20px 20px  20px;
+  padding: 0;
   text-indent: 0px;
 }
 
-.carousel-image image {
-  width: 200px;
-  height: 200px;
+.autoplay {
+  padding: 20px;
+  background-color: #fff;
 }
 
+.carousel-item {
+  padding: 0 10px;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 250px;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+.carousel-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-item .hover-liner {
+  text-align: center;
+  margin: 10px 0;
+  text-indent: 0;
+}
+
+/* Slick carousel arrows */
+.slick-prev,
+.slick-next {
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-size: 40px;
+  color: #002060;
+}
+
+.slick-prev {
+  left: 10px;
+}
+
+.slick-next {
+  right: 10px;
+}
+
+/* Slick dots */
+.slick-dots {
+  bottom: -30px;
+}
+
+.slick-dots li button:before {
+  font-size: 12px;
+  color: #002060;
+}
+
+.slick-dots li.slick-active button:before {
+  color: #002060;
+}
+
+@media screen and (max-width: 600px) {
+  .popup-carousel{
+    flex-direction: column;
+  }
+
+  .popup-carousel-title {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .carousel-image {
+    height: 200px;
+  }
+  
+  .popup-carousel-title {
+    padding: 15px;
+  }
+  
+  .autoplay {
+    padding: 15px 10px 40px;
+  }
+}
 
 .home-button {
   position: fixed;
