--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,8 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-max-width: 100%;
+/* max-width: 100%; */
+/* memo3:⬆︎slickがおかしかった原因 */
 }
 
 html {
@@ -784,15 +785,17 @@ width: 80%;
   margin-top: 40px;
   border: 1px solid #000000;
   display: flex;
+
   overflow: hidden;
+  width: 100%;
 }
 
 .popup-carousel-title {
   background-color: #000000;
   color: #fefefe;
   padding: 20px;
-  width: 40%;
 
+  width: 30%;
 }
 
 .popup-carousel-title h2 {
@@ -806,29 +809,36 @@ width: 80%;
   text-indent: 0px;
 }
 
-.autoplay {
+.SlickAutoplay {
   padding: 20px;
   background-color: #fff;
+
+  width: 70%;
+  min-width: 0;
+	height: 250px;
 }
 
-.carousel-item {
+.SlickCarouselItem {
   padding: 0 10px;
+
+  width: 100%;
 }
 
-.carousel-image {
+.SlickCarouselImage {
   width: 100%;
   height: 250px;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin-bottom: 10px;
 }
 
-.carousel-image img {
+.SlickCarouselImage img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+	display: block;
 }
 
-.carousel-item .hover-liner {
+.SlickCarouselItem .hover-liner {
   text-align: center;
   margin: 10px 0;
   text-indent: 0;
@@ -870,7 +880,9 @@ width: 80%;
   color: #002060;
 }
 
-@media screen and (max-width: 600px) {
+/* memo3:⬇︎ちょっと修正 */
+/* @media screen and (max-width: 600px) { */
+@media screen and (max-width: 980px) {
   .popup-carousel{
     flex-direction: column;
   }
@@ -880,19 +892,28 @@ width: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
 
-  .carousel-image {
-    height: 200px;
+    flex: 0 0 auto;
   }
   
   .popup-carousel-title {
     padding: 15px;
   }
   
-  .autoplay {
+  .SlickAutoplay {
     padding: 15px 10px 40px;
+
+    min-width: 0;
+    width: 100%;
+		height: 320px;
   }
+}
+
+@media screen and (max-width: 640px) {
+	.SlickCarouselItem>.d-flex{
+		flex-direction: column;
+	}
+
 }
 
 .home-button {
